{
  "signUpTitle": "{nameOfTheApp}에 가입하세요 {when}",
  "loginTitle": "{nameOfTheApp}에 로그인하세요",
  "signUpSubtitle": "Create a profile, follow other accounts, maker your own videos, and more.",
  "emailPasswordButton": "Use email & password",
  "appleButton": "Continue with Apple",
  "alreadyHaveAccount": "Already have an account?",
  "logIn": "Log in",
  "likeCount": "{value}",
  "commentCount": "{value}",
  "commentTitle": "{value1} {value2, plural, =1{comment} other{comments}}"
}
